--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CustomNotificationExample</string>
+    <string name="channel_name">Example Channel</string>
 </resources>
