Adding the layout notification and the default show notification behaviour

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CustomNotificationExample</string>
     <string name="channel_name">Example Channel</string>
+    <string name="show">Show</string>
 </resources>
